--- a/pokemon2.html
+++ b/pokemon2.html
@@ -43,188 +43,183 @@
 	<section>
 	  <h2 >Season 2</h2>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UDRmzZ4L#dZ_z0w-1Pduo1iFI9HYvIDciInJBUkd4QMinPb5GeIY" allowfullscreen ></iframe></p>
 			<h4>Episode 1</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></iframe></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/kaJChZ7C#tDLAKm_Vv9Ym2IcN5Zpo6BH4HIVYaUzBf0UyHhSMAGs" allowfullscreen ></iframe></p>
 			<h4>Episode 2</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/YbR0XBqR#0WoSO9TZd6CU3kIPCc5_wDJLnflQSEYAYMabjkn1gHs" allowfullscreen ></iframe></p>
 			<h4>Episode 3</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/4foGARwL#Y8iu1PpT-BiA6oOpm-LDEhNqQJDwGsUYckvKvvI7_Ws" allowfullscreen ></iframe></p>
 			<h4>Episode 4</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/gThU2JTC#w7N0LDQMnzMR3zuQmAWVDctcMtTjYpyjTcU0xc9Cw5M" allowfullscreen ></iframe></p>
 			<h4>Episode 5</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/VXIWAL4L#1I5T5wUPb68nK15KyzCO3YDJxrBnNgkMXSytXtkGC44" allowfullscreen ></iframe></p>
 			<h4>Episode 6</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Va42jRRJ#1F1O42x-MnAvH-GIvrziqU7xuxVITdtR9F0lHtTHCv0" allowfullscreen ></iframe></p>
 			<h4>Episode 7</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/pH5UiLhD#BQhZdYA83okZO4GqJJUAJPsUt10a2MOONPWHbasseWg" allowfullscreen ></iframe></p>
 			<h4>Episode 8</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wbpUXRZA#RHFNESiMHNOHxog3OwsFsVAUjvCfTVDk9hR1wTw07vM" allowfullscreen ></iframe></p>
 			<h4>Episode 9</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/lLoAlLYI#8WFy6_kIOo6bwQgLITXfdpzHvT8u4iErZaa5TSSNAzU" allowfullscreen ></iframe></p>
 			<h4>Episode 10</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/APJgyRjZ#LdC2hjgI7dw_YFrNDTmREF6kLKvVcTS5QEl8EHPLSNo" allowfullscreen ></iframe></p>
 			<h4>Episode 11</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/JLQGRDZD#Qt3I2Pts-d6EriTsZQ06EkP0Fp-Y-nAkXuzJcL-APL0" allowfullscreen ></iframe></p>
 			<h4>Episode 12</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/dOoEVbCJ#fB3J483tC4s7AccTL1kTziYFDdRqNratS7wm36wI_mE" allowfullscreen ></iframe></p>
 			<h4>Episode 13</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/MLxEhDrC#DRraFUpz3-tc0g-e4R2-Ee3I4cv4G7MkWYc0y3psEQs" allowfullscreen ></iframe></p>
 			<h4>Episode 14</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/8GgQjBTI#WoFsii3kxwXVL0ZVUHFc2chkWiVz12Buro8RjCT5IcQ" allowfullscreen ></iframe></p>
 			<h4>Episode 15</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/NWAAnbhQ#MO_P299CjgAYvuMgdXIJ8FmIqHhly5Pb5AVH5sXrq1w" allowfullscreen ></iframe></p>
 			<h4>Episode 16</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UOwwTRLI#QEQZAJ85Lvmrv5rbPuuRiNlJgwp3wXuj7Y6QfeMJ3FI" allowfullscreen ></iframe></p>
 			<h4>Episode 17</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/pfoAgLqa#mOBIOdgFZbydMOEXDHf0DxFzhEZgIcUThfeQBmwCJSo" allowfullscreen ></iframe></p>
 			<h4>Episode 18</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/BCIUULjQ#yPAPv2qGhKP_pMol2Hih-CImvecNbKukU0fNuCf9PG8" allowfullscreen ></iframe></p>
 			<h4>Episode 19</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/cawCABTK#mi6w70ko_7IENQfqi3z8cY5cKWA7RkE8B1pjx15h0Y8" allowfullscreen ></iframe></p>
 			<h4>Episode 20</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/EfogQJoI#XszM3YnTC8RaZ474Y1WAcpTBCwykw7V9LcCfHaEhHfg" allowfullscreen ></iframe></p>
 			<h4>Episode 21</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ALhAABrR#PFvtajd9qvkjK6P0rnHvpbyrnXJ8r98Bd9OGAqITS-E" allowfullscreen ></iframe></p>
 			<h4>Episode 22</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/pLISiZTT#TbO1ZL4Q0dtbPXiW49NMWsaJC3114GQndcOayQlHd3A" allowfullscreen ></iframe></p>
 			<h4>Episode 23</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/lahkxLiZ#Vp4nfB2X3tB5f08MRQKVMxNzbqws73nEB1gIH364GYM" allowfullscreen ></iframe></p>
 			<h4>Episode 24</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/9OgmFRwK#PoILjY3AQWAUkxFXlxC7aJvadZdJwLOatyCjgPkWN04" allowfullscreen ></iframe></p>
 			<h4>Episode 25</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/NX5CmTLR#BneKmDFKIJYyWPXWXfF0-j_Kh6lfhAK71P1fjEX9DCE" allowfullscreen ></iframe></p>
 			<h4>Episode 26</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wGZ2VBxD#rMkQf-CzWWhFkagJKm0caMyf9ZMAHeV8Wv8mEafnlhk" allowfullscreen ></iframe></p>
 			<h4>Episode 27</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/8LYWnRLT#pfQcGHvbdu31_9PE-tcFKVctELvvZtwaBuaQoxpt9Ww" allowfullscreen ></iframe></p>
 			<h4>Episode 28</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/lWA0gJhJ#5dpL6UFwaRJIRznY5sb5iaNHiOM9veFnXXkGEP2EdFo" allowfullscreen ></iframe></p>
 			<h4>Episode 29</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/QDBA2LhJ#_UeK3O-VwaZDR0n_86W2CM2Vp8bPylI9gaxhA_s4HEg" allowfullscreen ></iframe></p>
 			<h4>Episode 30</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/xHhgXbTS#q3KpdzD8mMfUPSu5QlJfeRqSfflUJWDhqaf7stC7fZk" allowfullscreen ></iframe></p>
 			<h4>Episode 31</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/RGYinBxT#HzTQCGhHE-CAQVQBMCFmktsrWIq8qax2WSkYIvMa4Dc" allowfullscreen ></iframe></p>
 			<h4>Episode 32</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/kToERLIT#kg0kkjfALypmxKKBxBjV7AODNBewooASEr59HPYe7ls" allowfullscreen ></iframe></p>
 			<h4>Episode 33</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Zeg0FZaR#t4M66JADsQFCWd6-gYcboawBRF1dR9lgDGLgYhO5K-E" allowfullscreen ></iframe></p>
 			<h4>Episode 34</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/cOokkRoa#KsK0N4icogw5_0NRtIh6nj6Q32--RPkHTZqbn1aznqc" allowfullscreen ></iframe></p>
 			<h4>Episode 35</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/tCZAFB5C#z0evfJWSvp6P4906HRxEwTEh5Eor51g5lzbB1bHvvAw" allowfullscreen ></iframe></p>
 			<h4>Episode 36</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 37</h4>
 			<p></p>
 		</div>
     </section>
