--- a/pokemon3.html
+++ b/pokemon3.html
@@ -43,12 +43,12 @@
 	<section>
 	  <h2 >Season 3</h2>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/1DBDQKAa#a7uQo2ntStkbUheZclHoNXHXbdrWuL63Hx8izsDu1Fo" allowfullscreen ></iframe></p>
 			<h4>Episode 1</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></iframe></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UXJRFYTR#dMf41mBCHNrsaDuXIOqXKuRswROhQyRpVpuEqYu_xwo" allowfullscreen ></iframe></p>
 			<h4>Episode 2</h4>
 			<p></p>
 		</div>
