--- a/evasupercut.html
+++ b/evasupercut.html
@@ -13,14 +13,18 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/EvaLogo.png" alt="Evangelion Rebuild Super Cut" width="25%" height="auto"></a>
+	<a><img src="images/EvaLogo.png" alt="Evangelion" width="25%" height="auto"></a>
   </span>
   <!-- Home Section -->
   <section class="home" id="home">
   </section>
-	  <h2 >Evangelion Super Cut</h2>
+	  <h2 >Revival of Evangelion: Death (true)²</h2>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1b9nTw5_p5O_nPoGXbGC4Wpqn9mtnmsZc/preview" width="720" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="https://drive.google.com/file/d/1xwXRmjyajyuGpE-pOwgN92bGa8JbOhsh/preview" width="720" height="480" allowfullscreen="allowfullscreen"></iframe></p>
+		</div>
+	  <h2 >The End of Evangelion</h2>
+		<div class="thumbnail">
+		  <p><iframe src="https://drive.google.com/file/d/1Hle0Ehqu2xgW8Tm6IKTHJbrLq3hai9d0/preview" width="720" height="480" allowfullscreen="allowfullscreen"></iframe></p>
 		</div>
     </section>
 </div>
