--- a/evasupercut.html
+++ b/evasupercut.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Evangelion Super Cut</title>
+<title>Evangelion</title>
 <link href="styles2.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/EvaSuperCut/favicon.ico">
 <link rel="apple-touch-icon" href="images/EvaSuperCut/apple-touch-icon.png">
