--- a/evangelion.html
+++ b/evangelion.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Evangelion</title>
+<meta content="Evangelion" property="og:title" />
+<meta content="All Evangelion Films" property="og:description" />
+<meta content="https://metrunui.github.io/evangelion.html" property="og:url" />
+<meta content="https://metrunui.github.io/images/EvaSuperCut/android.png" property="og:image" />
+<meta content="#CC0000" data-react-helmet="true" name="theme-color" />
 <link href="styles2.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/EvaSuperCut/favicon.ico">
 <link rel="apple-touch-icon" href="images/EvaSuperCut/apple-touch-icon.png">
