--- a/dbkai7.html
+++ b/dbkai7.html
@@ -4,6 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dragon Ball Z Kai</title>
+<meta content="DBZ Kai" property="og:title" />
+<meta content="Dragon Ball Z Kai Season 7 episodes" property="og:description" />
+<meta content="https://metrunui.github.io/dbkai7.html" property="og:url" />
+<meta content="https://metrunui.github.io/images/Kai/android.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <link href="styles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/Kai/favicon.ico">
 <link rel="apple-touch-icon" href="images/Kai/apple-touch-icon.png">
