--- a/ben10.html
+++ b/ben10.html
@@ -45,67 +45,67 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1eyy3fCwYXWg72ZZkDvKbWV_Pe0d49UUv/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4 >Episode 1</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1kZoMQjPOcfLWffnqOK-ILBRCBtxYoQun/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 2</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/18H0yvg_L2oIcN1IxdCePEiWkq-DnET_J/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 3</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1pgbUKRy_3ZqJU9dLb6nJ5Z4_25R9UmrC/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 4</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1wuwgH2d3aMMPlpKEyDfsXzLbq4BRiDmM/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 5</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1IFDDhK4bHxttJcpc-zMPDv_bDcftJ2br/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 6</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1eNfkvTeSFPwgp5FWInWAa-GYtK9xxg9e/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 7</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1ZdOZeUdKDviyxULI_RwFbnGWz-VksWWI/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 8</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1pKhI8eMEEfwyX5Ox_peUhYkMfTA9ARHA/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1C4nwn1EYGeCnU2GKuStoGpthFufvn2Kv/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/11UzeZrNPxuHmxMTxoLXj1jsyjQov_dmt/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1vE8WS7iV8jJD_F_Se64m4vAchv2vCdW7/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="https://drive.google.com/file/d/1z1Qtp1BBDH85oOVsCNVGlsxaZiczuf5n/preview" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
