--- a/ben10.html
+++ b/ben10.html
@@ -18,7 +18,7 @@
 <!-- Main Container -->
 <div class="container">
   <span class="logo" width="auto" height="auto">
-	<a><img src="images/Ben_10_logo.png" alt="Ben 10" width="35%" height="auto"></a>
+	<a><img src="images/Ben_10_logo.png" alt="Ben 10" width="300px" height="auto"></a>
   </span>
   <!-- Navigation -->
   <header>
