--- a/ben10UA.html
+++ b/ben10UA.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ben 10</title>
+<title>Ben 10: Ultimate Alien</title>
 <meta content="Ben 10: Ultimate Alien" property="og:title" />
 <meta content="Ben 10: Ultimate Alien Season 1 episodes" property="og:description" />
 <meta content="https://metrunui.github.io/ben10UA.html" property="og:url" />
