--- a/ben10AFs2.html
+++ b/ben10AFs2.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Ben 10</title>
+<title>Ben 10: Alien Force</title>
 <meta content="Ben 10: Alien Force" property="og:title" />
 <meta content="Ben 10: Alien Force Season 2 episodes" property="og:description" />
 <meta content="https://metrunui.github.io/ben10AFs2.html" property="og:url" />
