--- a/ben10UAs2.html
+++ b/ben10UAs2.html
@@ -6,7 +6,7 @@
 <title>Ben 10: Ultimate Alien</title>
 <meta content="Ben 10: Ultimate Alien" property="og:title" />
 <meta content="Ben 10: Ultimate Alien Season 2 episodes" property="og:description" />
-<meta content="https://metrunui.github.io/ben10UA.html" property="og:url" />
+<meta content="https://metrunui.github.io/ben10UAs2.html" property="og:url" />
 <meta content="https://metrunui.github.io/images/Ben10/android.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <link href="styles5.css" rel="stylesheet" type="text/css">
