--- a/ben10OVs3.html
+++ b/ben10OVs3.html
@@ -36,7 +36,7 @@
   </section>
   <!-- Banner Section -->
   <section class="banner">
-    <h2 >Ben 10: Alien Force Episodes</h2>
+    <h2 >Ben 10: Omniverse Episodes</h2>
 	  <div>
 		 <h1><a href="ben10OV.html"><img src="images/ben10OVs1.jpg" alt="Ben 10 season 1" width="192" height="192"></a>
 		 <a href="ben10OVs2.html"><img src="images/ben10OVs2.jpg" alt="Ben 10 season 2" width="192" height="192"></a>
